--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>cambiomonedas</groupId>
 	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>api</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -26,6 +27,10 @@
 		<tag/>
 		<url/>
 	</scm>
+	<modules>
+        
+        <module>dominio</module>
+    </modules>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
