feat(api):nuevo repositorio para monedas

--- a/api/infraestructura/pom.xml
+++ b/api/infraestructura/pom.xml
@@ -6,10 +6,16 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
  
-    <artifactId>dominio</artifactId>
+    <artifactId>infraestructura</artifactId>
     <packaging>jar</packaging>
  
- 
+    <dependencies>
+        <dependency>
+            <groupId>cambiomonedas</groupId> <!-- Ajusta según el paquete de tu proyecto -->
+            <artifactId>dominio</artifactId>
+            <version>0.0.1-SNAPSHOT</version> <!-- O usa la versión que corresponda -->
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
