--- a/api/presentacion/src/main/resources/application.properties
+++ b/api/presentacion/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=api
-server.port=8080
+server.port=${PORT:8080}
 
-# PostgreSQL datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/monedas
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# H2 Database (en memoria - para despliegue)
+spring.datasource.url=jdbc:h2:mem:analisis_divisas
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
