--- a/api/presentacion/pom.xml
+++ b/api/presentacion/pom.xml
@@ -1,15 +1,17 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cambiomonedas</groupId>
         <artifactId>api</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
- 
+
     <artifactId>presentacion</artifactId>
     <packaging>jar</packaging>
- 
+
     <dependencies>
+        <!-- Dependencias del proyecto -->
         <dependency>
             <groupId>cambiomonedas</groupId>
             <artifactId>dominio</artifactId>
@@ -20,14 +22,26 @@
             <artifactId>aplicacion</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
- 
-        <!-- Removed H2: using external DB -->
 
+        <!-- Base de datos H2 (en memoria) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- Documentación API -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+        
+        <!-- Web Starter (necesario si no viene transitivo) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
- 
+
 </project>
